# Create-an-editable-psychrometric-chart

./: README.md  build_exe.ps1  pyproject.toml  run.bat  run_log.txt  zones.json
src/: main
src/psychrimetric/: _init_.py  add.py  app.py  epw_io.py  gui_app.py  main.py  period_filter.py  run_colab.py  svg_post.py  zone_registry.py
src/psychrimetric_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/psychrometric/: __init__.py  app.py  enhance_chart.py  epw_io.py  gui.py  main.py  render.py
src/psychrometric/test/: py
src/psychrometric_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
