[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psychrimetric-tools"
version = "0.1.0"
description = "EPW -> Psychrometric chart (density/zone) -> SVG"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "plotly",
  "flet",
  "kaleido",
  "shimeri @ git+https://github.com/yutaka-shoji/shimeri.git"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
